--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -79,6 +79,26 @@ img {
 	margin: 40px 8px 0px 8px;
 }
 
+button {
+    font-family: "Raleway", sans-serif;
+	text-transform: uppercase;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+}
+
+.button1 {border-radius: 2px;}
+.button2 {border-radius: 4px;}
+.button3 {border-radius: 8px;}
+.button4 {border-radius: 12px;}
+.button5 {border-radius: 50%;}
+
 .copyright {
 	font-family: "Raleway", sans-serif;
 	float: left;
